fixed/align

--- a/ejercicio-react/src/styles/components/_EventContainer.scss
+++ b/ejercicio-react/src/styles/components/_EventContainer.scss
@@ -3,5 +3,8 @@
 
 .event-container {
     @include row-disposition;
+}
 
+.event-container2 {
+    @include column-disposition;
 }
