--- a/ejercicio-react/src/styles/elements/_button.scss
+++ b/ejercicio-react/src/styles/elements/_button.scss
@@ -2,4 +2,5 @@ button{
     border-radius: 15px;
     padding:5px 10px;
     margin: 5px 10px;
+    max-width: 15%;
 };
